--- a/web/workspace/partials/solutions/solution.dust
+++ b/web/workspace/partials/solutions/solution.dust
@@ -5,16 +5,13 @@
   </div>
 </div>
 
-<div class="container container--divider">
-  <div class="grid">
-    {?description}
-      <div class="col w-2-3 normal">
-        {@markdown}{description}{/markdown}
-      </div>
-    {/description}
-    <div class="col w-1-3">
-      <p class="medium txt--blue">{cta}</p>
-      <a href="/contact/" class="btn btn--blue small">Contact us</a>
-    </div>
-  </div>
+<div class="container container--divider read normal"> 
+  {?description}
+    {@markdown}{description}{/markdown}
+  {/description}
+</div>
+
+<div class="container container--divider alignc">
+  <p class="large txt--blue alignauto no-marg">{cta}</p>
+  <a href="/contact/" class="marg__top btn btn--blue normal">Contact us</a>
 </div>
