--- a/web/workspace/partials/platform/index.dust
+++ b/web/workspace/partials/platform/index.dust
@@ -1,5 +1,5 @@
 <div class="container container--pad alignc">
-  <div class="hdr kilo read alignauto no-marg-i">DADI is a modern microservices framework, built specifically in support of the principles of <a href="/platform/concepts/api-first-and-cope/" class="txt--red">API first and COPE</a>.</div>
+  <div class="hdr kilo read alignauto no-marg-i">DADI is a modern microservices framework, built specifically in support of the principles of <span class="txt--red"><a href="/platform/concepts/api-first-and-cope/">API first and COPE</a></span>.</div>
 </div>
 
 <div class="container container--divider">
@@ -7,10 +7,10 @@
     <div class="col w-1-2">        
       <p class="normal"><strong>DADI</strong> is architected to facilitate cross-functional teams organised around discrete capability, in stark contrast to traditional monolithic approaches to system architecture.</p>
 
-      <p class="normal"><strong>DADI</strong> is built on Node.JS and RethinkDB and provides a series of self-contained service layers which can be run independently or as a whole.</p>
+      <p class="normal"><strong>DADI</strong> is built on <em>Node.JS</em> and <em>MongoDB</em> and provides a series of self-contained service layers which can be run independently or as a whole.</p>
     </div>
     <div class="col w-1-2">
-      <p class="normal"><strong>DADI</strong> is unique in its approach to data: the entire platform is built to facilitate Data Driven Experiences. It puts the concept of the individual at the heart of the platform, creating real-time, person-level taxonomies of interest, and providing multiple actionable data points to enable the construction of individual-specific experiences.</p>
+      <p class="normal"><strong>DADI</strong> is unique in its approach to data: the entire platform is built to facilitate <a href="/platform/concepts/data-driven-experiences/" class="txt--red fwb">Data Driven Experiences™</a>. It puts the concept of the individual at the heart of the platform, creating real-time, person-level taxonomies of interest, and providing multiple actionable data points to enable the construction of individual-specific experiences.</p>
     </div>
   </div>
 
