--- a/web/workspace/partials/content-modules/customers.dust
+++ b/web/workspace/partials/content-modules/customers.dust
@@ -3,21 +3,21 @@
 <h2 class="hdr larger txt--blue no-marg-i">Used by businesses of all sizes</h2>
 </div>
 
-<div class="marg__bottom bg--light-grey pad--x2" style="box-shadow: 0 0 9px 3px rgba(0,0,0,0.02) inset">
+<div class="marg__bottom bg--light-grey pad--x2 bdr-shadow">
   <ul class="container list--quotes normal cf">
     <li class="inline-block alignv w-1-5 bs-w-1-1 hdr">
-      <img class="marg__top" src="/assets/img/logo-lifestyleone.png" height="38" alt="Lifestyle.one">
+      <img class="alignv" src="/assets/img/logo-lifestyleone.png" height="39" alt="Lifestyle.one">
     </li>
     <li class="inline-block alignv alignc w-1-5 bs-w-1-1 hdr">
-      <img class="marg__top" src="/assets/img/logo-whatcar.png" height="25" alt="WhatCar?">
+      <img class="alignv" src="/assets/img/logo-whatcar.png" height="25" alt="WhatCar?">
     </li>
     <li class="inline-block alignv alignc w-1-5 bs-w-1-1 hdr">
-      <img class="marg__top" src="/assets/img/logo-empire.png" height="25" alt="Empire Magazine">
+      <img class="alignv" src="/assets/img/logo-empire.png" height="25" alt="Empire Magazine">
     <li class="inline-block alignv alignc w-1-5 bs-w-1-1 hdr">
-      <img class="marg__top" src="/assets/img/logo-vle.png" height="40" alt="Virgin Limited Edition">
+      <img class="alignv" src="/assets/img/logo-vle.png" height="40" alt="Virgin Limited Edition">
     </li>
-    <li class="inline-block alignv alignc w-1-5 bs-w-1-1 hdr">
-      <img class="marg__top" src="/assets/img/logo-monocle.png" height="21" alt="Monocle">
+    <li class="inline-block alignv alignr w-1-5 bs-w-1-1 hdr">
+      <img class="alignv" src="/assets/img/logo-monocle.png" height="21" alt="Monocle">
     </li>
   </ul>
 </div>
