--- a/web/workspace/pages/success-stories.dust
+++ b/web/workspace/pages/success-stories.dust
@@ -3,13 +3,13 @@
 {<title}{?params.client}{successes.results[0].title} / {/params.client} Success stories{/title}
 
 {^params.client}
-  <div class="container container--pad">
-    <h1 class="hdr kilo read no-marg-i txt--blue">Success stories</h1>
-    <p class="no-marg pad__top--half normal marg__bottom">Customers of all sizes succeed with <strong>DADI</strong></p>
+  <div class="container pad__bottom alignc">
+    <h1 class="hdr kilo"><span class="txt--blue block">Success stories</span></h1>
+    <p class="hdr larger alignauto">Customers of all sizes succeed with DADI</p>
   </div>
 
   {#successes.results}
-    <div class="bg--black" style="background-image:url(/assets/successes/{handle}.jpg);background-size:cover;background-position:50% 50%">
+    <div class="marg txt--white bg--black" style="background-image:url(/assets/successes/{handle}.jpg);background-size:cover;background-position:50% 50%">
       <a href="/successes/{handle}/">
         <div class="container">
           <div class="bl-w-2-3 pad__top--x2 pad__bottom--x2">
