--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -295,3 +295,44 @@ form {
 		}
 	}
 }
+
+
+.read p {
+	margin-left: auto;
+	margin-right: auto;
+}
+.read h1,h2,h3,h4 {
+	margin: 2em auto 0;
+	max-width: 680px;
+}
+.read img {
+	max-width: 140%;
+	height: auto;
+	margin-left: -20%;
+}
+.read ul,
+.read ol {
+	margin: 1.5em auto;
+	max-width: 680px;
+}
+.read ul li,
+.read ol li {
+	margin: 0.5em 1em;
+}
+.read a {
+	border-bottom: 1px solid;
+	font-weight: bold;
+	color: #2C85E5;
+}
+.read.hdr a {
+	font-weight: normal;
+	color: inherit;
+}
+
+
+abbr {
+	cursor: help;
+	text-decoration: none !important;
+	//background: #ffebb3;
+	font-style: italic;
+}
