--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -11,8 +11,6 @@ body.dark {
 }
 
 .container {
-	padding-left: 8%;
-	padding-right: 8%;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1000px;
@@ -38,6 +36,8 @@ body.dark {
 	.container--pad {
 		padding-top: 20px;
 		padding-bottom: 20px;
+		padding-left: 8%;
+		padding-right: 8%;
 	}
 }
 
@@ -130,6 +130,7 @@ main {
 	background: #fff;
 	margin-top: 270px;
 	padding-bottom: 1px;
+	-webkit-transform: translate3d(0, 0, 0);
 
 	body.home & {
 		margin-top: 640px;
@@ -144,6 +145,7 @@ main {
 		background: #fff;
 		height: 100px;
 		display: block;
+		z-index: -1;
 		box-shadow: 0 -15px 20px 0 #080E17;
 	}
 }
