--- a/web/workspace/pages/supporting.dust
+++ b/web/workspace/pages/supporting.dust
@@ -2,9 +2,9 @@
 
 {<title}{supporting.results[0].title}{/title}
 
-<div class="container container--divider normal">
+<div class="container read normal">
   {#supporting.results}
-  	<h1>{title}</h1>
+  	<h1 class="pad__top--x2">{title}</h1>
     {@markdown}{body|s}{/markdown}
   {/supporting.results}
 </div>
