Change header button colour

--- a/web/workspace/frontend/sass/parts/forms.scss
+++ b/web/workspace/frontend/sass/parts/forms.scss
@@ -88,6 +88,9 @@
 	&:active,&:hover,&:focus {
 		background: $green;
 	}
+	&.btn--fill {
+		background: $green;
+	}
 }
 .btn.btn--disabled,
 .btn.btn--disabled:hover
