--- a/web/workspace/partials/content-modules/products.dust
+++ b/web/workspace/partials/content-modules/products.dust
@@ -38,9 +38,9 @@
         <strong class="larger block hdr" style="color:#EF711D">visualize</strong>
         <p class="normal">Real-time data visualization and dashboarding. Plugs into <strong>DADI Track</strong>, <em>Google Analytics</em> and many other third-party systems</p>
       </a></div>
-      <div class="col w-1-4 pad__bottom--x2"><a class="block zoom" href="/platform/identify/">
-        <div class="product-logo"><img src="/assets/products/dadi-identify.png" width="25"></div>
-        <strong class="larger block hdr" style="color:#5CC617">identify</strong>
+      <div class="col w-1-4 pad__bottom--x2"><a class="block zoom" href="/platform/identity/">
+        <div class="product-logo"><img src="/assets/products/dadi-identity.png" width="25"></div>
+        <strong class="larger block hdr" style="color:#5CC617">identity</strong>
         <p class="normal">End-to-end CRM solution that guarantees the uniqueness of individuals – and powers segmentation – in the anonymous and known space</p>
       </a></div>
 
