--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -138,6 +138,7 @@ ga('create', 'UA-42395806-1', 'auto');
 ga('send', 'pageview');
 </script>
 
+<script src="/assets/js/pattern.min.js"></script>
 <script src="/assets/js/main.js"></script>
 </body>
 </html>
