--- a/web/workspace/partials/content-modules/customers.dust
+++ b/web/workspace/partials/content-modules/customers.dust
@@ -1,5 +1,5 @@
 <div class="container container--divider">
-<a href="/successes/" class="btn btn--fill txt--white btn--blue normal float--right">See all customer stories</a>
+<a href="/successes/" class="btn btn--fill txt--white btn--blue normal float--right">See all success stories</a>
 <h2 class="hdr larger txt--blue no-marg-i">Used by businesses of all sizes</h2>
 </div>
 
