--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -44,6 +44,9 @@ body.dark {
 @media #{$break-large} {
 	header {
 		margin-bottom: 60px;
+		h1 {
+			margin-top: 22px;
+		}
 	}
 }
 
@@ -170,11 +173,12 @@ body.dark {
 .nav {
 	font-family: $font-headers;
 	list-style: none;
-	margin-top: 1.2em;
+    margin-top: 13px;
+    line-height: 32px;
 
 	a {
 		position: relative;
-		padding: 10px 0 4px;
+		padding: 10px 0 3px;
 
 		&:hover, &.active {
 			color: $red;
