--- a/web/workspace/partials/header.dust
+++ b/web/workspace/partials/header.dust
@@ -14,8 +14,10 @@
 <div class="top {?params.section}top--{params.section}{/params.section}">
   <div class="container"> 
     {>"partials/navigation" /}
+    {>"partials/breadcrumb" /}
     {+top}{/top}
   </div>
 </div>
 
 <main>
+
