--- a/web/workspace/frontend/sass/parts/variables.scss
+++ b/web/workspace/frontend/sass/parts/variables.scss
@@ -27,11 +27,11 @@ $break-large:			"handheld, only screen and (min-width: 50em)";
 // Global colours
 
 $background:		#21262D;
-$text:				#111111;
+$text:				#21262D;
 $black:				#000000;
 $white:				#FFFFFF;
 
-$light-grey:		#f2f3f4;
+$light-grey:		#fafafa;
 $grey:				#aaa;
 $mid-grey:			#4B5B5E;
 $dark-grey:			#2C3B3D;
