--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -43,7 +43,7 @@ body.dark {
 
 @media #{$break-large} {
 	header {
-		margin-bottom: 60px;
+		margin-bottom: 70px;
 		h1 {
 			margin-top: 22px;
 		}
@@ -51,7 +51,7 @@ body.dark {
 }
 
 .top {
-	padding-bottom: 50px;
+	padding-bottom: 70px;
 	position: relative;
 	overflow: hidden;
 	position: fixed;
@@ -61,20 +61,6 @@ body.dark {
 	background-size: cover;
 	background-image: url(/assets/img/bg-dark.jpg);
 	color: #fff;
-
-	// body.dark & {
-	// 	background-color: #fff;
-	// 	background-size: cover;
-	// 	background-image: url(/assets/img/bg-grey.jpg);
-	// 	color: #21262D;
-
-	// 	.top__promo, .top__promo:after {
-	// 		background: rgba(#000,0.05);
-	// 	}
-	// 	.btn--fill {
-	// 		color: #fff;
-	// 	}
-	// }	
 	
 	.grid {
 		position: relative;
@@ -89,7 +75,7 @@ body.dark {
 
 @media #{$break-large} {
 	.top {
-		padding-top: 40px;
+		padding-top: 30px;
 	}
 	.top__promo {
 		padding: 30px 0 30px 40px;
@@ -306,39 +292,51 @@ form {
 .read p {
 	margin-left: auto;
 	margin-right: auto;
-}
-.read h1,h2,h3,h4 {
-	margin: 2em auto 0;
-	max-width: 680px;
-}
-.read img {
-	max-width: 140%;
-	height: auto;
-	margin-left: -20%;
-}
-.read ul,
-.read ol {
-	margin: 1.5em auto;
-	max-width: 680px;
-}
-.read ul li,
-.read ol li {
-	margin: 0.5em 1em;
-}
-.read a {
-	border-bottom: 1px solid;
-	font-weight: bold;
-	color: #2C85E5;
-}
-.read.hdr a {
-	font-weight: normal;
-	color: inherit;
-}
 
+	h1,h2,h3,h4 {
+		margin: 2em auto 0;
+		max-width: 680px;
+
+		&:first-of-type() {
+			margin-top: 0;
+		}
+	}
+	img {
+		max-width: 140%;
+		height: auto;
+		margin-left: -20%;
+	}
+	ul,
+	ol {
+		margin: 1.5em auto;
+		max-width: 680px;
+	}
+	ul li,
+	ol li {
+		margin: 0.5em 1em;
+	}
+	a {
+		border-bottom: 1px solid;
+		font-weight: bold;
+		color: #2C85E5;
+	}
+	&.hdr a {
+		font-weight: normal;
+		color: inherit;
+	}
+}
 
 abbr {
 	cursor: help;
 	text-decoration: none !important;
 	//background: #ffebb3;
 	font-style: italic;
+}
+
+
+.skew {
+	transform: skewY(-3deg);
+}
+.skew--reverse {
+	transform: skewY(3deg);
 }
