--- a/web/workspace/pages/success-stories.dust
+++ b/web/workspace/pages/success-stories.dust
@@ -2,15 +2,11 @@
 
 {<title}{?params.client}{successes.results[0].title} / {/params.client} Success stories{/title}
 
-{^params.client}
-  <div class="container container--pad alignc">
-    <p class="hdr larger alignauto read no-marg-i">We have helped organisations both large and small succeed with our platform</p>
-  </div>
-
-  <div class="container">
+{^params.client}  
+  <div class="marg cf pad__top--x2">
   {#successes.results}
     <div class="marg__bottom txt--white bg--black" style="background-image:url(/assets/successes/{handle}.jpg);background-size:cover;background-position:50% 50%">
-      <a href="/successes/{handle}/">
+      <a href="/success-stories/{handle}/">
         <div class="container">
           <div class="bl-w-2-3 pad--x2">
             <p class="hdr larger" style="color:{color}">{title}</p>
@@ -58,7 +54,7 @@
           <p class="alignauto larger hdr no-marg-i pad__top">“{@soberMarkdown}{quote.body}{/soberMarkdown}”</p>
           <p class="alignauto txt--red">{@soberMarkdown}{quote.cite}{/soberMarkdown}</p>
 
-          <div class="pad__top marg__top pad__bottom"><a href="/successes/" class="btn btn--red small">See more success stories</a></div>
+          <div class="pad__top marg__top pad__bottom"><a href="/success-stories/" class="btn btn--red small">See more success stories</a></div>
         </div>
       </div>
     </div>
