--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -30,7 +30,7 @@
       <div class="col w-1-3 pad__bottom">
         <ul class="list--line normal txt--blue">
           <li><a href="/contact/">Contact us</a></li>
-          <li><a href="/successes/">Success stories</a></li>
+          <li><a href="/success-stories/">Success stories</a></li>
           <li><a href="/latest/">Latest</a></li>
           <li><a href="/on-demand/">On demand</a></li>
           <li><a href="/team/">Our team</a></li>
