--- a/web/workspace/pages/on-demand.dust
+++ b/web/workspace/pages/on-demand.dust
@@ -2,23 +2,27 @@
 
 {<title}On-demand{/title}
 
-<div class="container pad__bottom alignc">
-  <img src="/assets/img/logo-ondemand.png" height="45" class="alignv">
-  <h1 class="hdr kilo"><span class="txt--red block">Cloud computing.</span> Designed for developers.</h1>
-</div>
+<div class="container container--pad marg__top">
 
-<div class="container container--divider alignc">
-  <p class="medium hdr alignauto pad__bottom">DADI on demand will be launching soon. Let us know your email address to be the first to know.</p>
+  <div class="grid">
+    <div class="col w-1-2">
+  <p class="kilo hdr read pad__bottom no-marg-i"><span class="txt--red block">Cloud computing.</span> Designed for developers.</p>
+  </div>
+
+  <div class="col w-1-2">
 
   <form action="http://mail.dadi.tech/t/i/s/ptyhjt/" method="post">
     <input name="cm-ptyhjt-ptyhjt" type="email" class="email text" placeholder="Your email address"><button class="btn btn--blue" type="submit">Register interest</button>
   </form>
 
-  <p class="small txt--grey alignauto pad__top">By signing up you agree to the <a href="/privacy" class="txt--black">Privacy Policy</a>.</p>
+  <p class="small txt--grey alignauto">By signing up you agree to the <a href="/privacy" class="txt--black">Privacy Policy</a>.</p>
+  </div>
+
+  </div>
 </div>
 
 <div class="bg--light-grey bdr__top bdr__bottom bdr--bdr-grey">
-  <div class="container container--divider alignc">
+  <div class="container container--pad alignc">
     <p class="hdr larger alignauto">Seamlessness management from development to MVP to scale</p>
 
     <ul class="list--quotes normal cf grid pad__top--x2">
@@ -60,7 +64,7 @@
   </div>
 </div>
 
-<div class="container container--divider alignc">
+<div class="container container--pad alignc">
   <p class="medium hdr alignauto pad__bottom">DADI on demand will be launching soon. Let us know your email address to be the first to know.</p>
 
   <form action="..." method="post">
