--- a/web/workspace/partials/header.dust
+++ b/web/workspace/partials/header.dust
@@ -15,6 +15,9 @@
   <div class="container"> 
     {>"partials/navigation" /}
     {>"partials/breadcrumb" /}
+    {^params}
+    {>"partials/titles" placement=page.key /}
+    {/params}
     {+top}{/top}
   </div>
 </div>
