--- a/web/workspace/partials/latest/index.dust
+++ b/web/workspace/partials/latest/index.dust
@@ -1,8 +1,4 @@
-<div class="container container--pad alignc">
-  <p class="hdr larger alignauto read no-marg-i">Platform, innovation and industry insight from your friends at DADI</p>
-</div>
-
-<div class="container container--divider marg__top">
+<div class="container pad__top marg__top">
   <div class="grid">
     <div class="col w-2-3 bs-w-1-1">
       {#insights}
