--- a/web/workspace/partials/solutions/solution.dust
+++ b/web/workspace/partials/solutions/solution.dust
@@ -1,4 +1,4 @@
-<div class="container container--pad alignc">
+<div class="container pad__bottom--x2 alignc">
   <img src="/assets/icons/{icon}.svg" class="marg__bottom" height="70">
   <h1 class="no-marg-i kilo txt--blue marg__bottom">{headline}</h1>
   <p class="hdr medium alignauto read pad__top--half">{overview}</p>  
