--- a/web/workspace/pages/success-stories.dust
+++ b/web/workspace/pages/success-stories.dust
@@ -46,9 +46,7 @@
 
     <div class="container container--divider">
       <div class="grid">
-        <div class="col w-1-2">
-          <p class="alignauto normal">{@soberMarkdown}{detail}{/soberMarkdown}</p>
-        </div>
+        <div class="col w-1-2 normal">{@markdown}{detail}{/markdown}</div>
 
         <div class="col w-1-2">
           <p class="alignauto larger hdr no-marg-i pad__top">“{@soberMarkdown}{quote.body}{/soberMarkdown}”</p>
