--- a/web/workspace/partials/titles.dust
+++ b/web/workspace/partials/titles.dust
@@ -1,21 +1,23 @@
-{@select key=placement}
-  {@any}<div class="container pad__top pad__bottom ">{/any}
-  {@eq value="Platform"}
-    <div class="hdr kilo read no-marg-i pad__bottom">A modern microservices framework, built specifically in support of the principles of <span class="txt--red"><a style="border:0" href="/platform/concepts/api-first-and-cope/">API first and COPE</a></span>.</div>
-  {/eq}
-  {@eq value="Success stories"}
-    <div class="hdr kilo read no-marg-i pad__bottom">We have helped organisations both large and small succeed with our platform.</div>
-  {/eq}
-  {@eq value="On demand"}
-    <div class="hdr kilo no-marg-i read">Launching soon. Let us know your email address to be the first to know.</div>
-  {/eq}
-  {@eq value="Solutions"}
-    <h1 class="hdr kilo read  no-marg-i txt--blue">Heavy lifting, when you need it</h1>
-    <p class="normal read">Our solutions team can help you grow your business by optimising your data strategies and improving the way that you engage with your customers across all channels.</p>
-    <p><a href="/success-stories/" class="btn btn--blue normal">See success stories</a></p>
-  {/eq}
-  {@eq value="Latest"}
-    <p class="hdr kilo read no-marg-i">Platform, innovation and industry insight from your friends at DADI</p>
-  {/eq}
-  {@any}</div>{/any}
-{/select}
+{^params}
+  {@select key=placement}
+    {@any}<div class="container pad__top pad__bottom ">{/any}
+    {@eq value="Platform"}
+      <div class="hdr kilo read no-marg-i pad__bottom">A modern microservices framework, built specifically in support of the principles of <span class="txt--red"><a style="border:0" href="/platform/concepts/api-first-and-cope/">API first and COPE</a></span>.</div>
+    {/eq}
+    {@eq value="Success stories"}
+      <div class="hdr kilo read no-marg-i pad__bottom">We have helped organisations both large and small succeed with our platform.</div>
+    {/eq}
+    {@eq value="On demand"}
+      <div class="hdr kilo no-marg-i read">Launching soon. Let us know your email address to be the first to know.</div>
+    {/eq}
+    {@eq value="Solutions"}
+      <h1 class="hdr kilo read  no-marg-i txt--blue">Heavy lifting, when you need it</h1>
+      <p class="normal read">Our solutions team can help you grow your business by optimising your data strategies and improving the way that you engage with your customers across all channels.</p>
+      <p><a href="/success-stories/" class="btn btn--blue normal">See success stories</a></p>
+    {/eq}
+    {@eq value="Latest"}
+      <p class="hdr kilo read no-marg-i">Platform, innovation and industry insight from your friends at DADI</p>
+    {/eq}
+    {@any}</div>{/any}
+  {/select}
+{/params}
