--- a/web/workspace/frontend/sass/parts/lists.scss
+++ b/web/workspace/frontend/sass/parts/lists.scss
@@ -100,7 +100,7 @@
 	}
 }
 .list--breadcrumb {
-	border-top: 1px solid #122A3A;
+	border-top: 1px solid rgba(255,255,255,0.1);
 	text-align: left;
 	padding-top: 20px;
 
