--- a/web/workspace/pages/success-stories.dust
+++ b/web/workspace/pages/success-stories.dust
@@ -8,7 +8,7 @@
     <div class="marg__bottom txt--white bg--black" style="background-image:url(/assets/successes/{handle}.jpg);background-size:cover;background-position:50% 50%">
       <a href="/success-stories/{handle}/">
         <div class="container">
-          <div class="bl-w-2-3 pad--x2">
+          <div class="read bl-w-2-3 pad__top--x2 pad__bottom--x2">
             <p class="hdr larger" style="color:{color}">{title}</p>
             <p class="medium">{summary}</p>
             <p><span class="btn">Read more</span></p>
