--- a/web/workspace/partials/header.dust
+++ b/web/workspace/partials/header.dust
@@ -12,7 +12,11 @@
 <body class="{+bodyClass}light{/bodyClass}">
 
 <div class="top {?params.section}top--{params.section}{/params.section}">
-  {>"partials/pattern" primary="#040309" /}
+  {?page.color}
+    {>"partials/pattern" primary=page.color /}
+  {:else}
+    {>"partials/pattern" primary="#041628" /}
+  {/page.color}
 
   <div class="container"> 
     {>"partials/navigation" /}
