--- a/web/workspace/partials/platform/concepts.dust
+++ b/web/workspace/partials/platform/concepts.dust
@@ -22,9 +22,13 @@
       </div>
     </div>
     <div class="container container--divider normal">
-      <div class="read alignauto">
-        {@markdown}{body}{/markdown}
-      </div>
+      <div class="grid">
+        <div class="col w-2-3">
+          {@markdown}{body}{/markdown}
+        </div>
+        <div class="col w-1-3">
+          {>"partials/platform/sidebar" /}
+        </div>
     </div>
   {/concepts.results}
 {/params.concept}
