--- a/web/workspace/partials/solutions/solution.dust
+++ b/web/workspace/partials/solutions/solution.dust
@@ -5,11 +5,16 @@
 </div>
 
 <div class="container container--divider normal"> 
-  {?description}
-    <div class="read alignauto">
-      {@markdown}{description}{/markdown}
+  <div class="grid">
+    {?description}
+      <div class="col w-2-3">
+        {@markdown}{description}{/markdown}
+      </div>
+    {/description}
+    <div class="col w-1-3">
+      {>"partials/solutions/sidebar" /}
     </div>
-  {/description}
+  </div>
 </div>
 
 <div class="container container--divider alignc">
